Mobile fixes and Dark mode media query
dont break my layout again you silly extension

--- a/CSS/comingsoon.css
+++ b/CSS/comingsoon.css
@@ -212,11 +212,18 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     fill: green;
   }
 
-/*ANIMATED ICONS*/
-.icon-container{position: absolute;
+/*ANIMATED ICONS
+.icon-container{
+align-items: center;
+    position: absolute;
   left: 50%;
   top:65%;
-  transform: translate(-50%, 0);
+transform: translate(-50%, 0);}*/
+.icon-container{
+    position: relative;
+    display: inline-block;
+    margin-top: 50px;
+    
 }
   .cool-icons {
     position:relative;
@@ -332,7 +339,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 
 /*MEDIA QUERIES*/
 @media screen and (max-width:1200px){
-  .coming-soon{margin-top:15vh;margin-bottom:30px;}
+  .coming-soon{margin-top:5vh;margin-bottom:30px;}
     .coming-soon h1 {
         font-size: 4.5rem;line-height: 1.3;margin-bottom:30px;
     }
@@ -376,32 +383,143 @@ ul li a {
 
 @media screen and (max-width:531px){
  
-  .coming-soon{margin-top:20vh;margin-bottom:30px;}
+  .coming-soon{margin-top:10vh;margin-bottom:30px;}
   .coming-soon h1 {
       font-size: 2.4rem;line-height: 1.3;margin-bottom:15px;
   }
-  .coming-soon h3{width: 100%;max-width: 100%;}
-  .icon-container{position: absolute;
-    left: 50%;
-    top:58%;
-    transform: translate(-50%, 0);
-  }
+  .coming-soon h3{width: 100%;max-width: 100%;font-size: 1rem;}
+ 
+  
  
      
     
       ul li a {
         display:block;
         position:relative;
+        width:80px;
+        height:80px;
+        line-height:80px;
+        font-size:28px;
+        text-align:center;
+        text-decoration:none;
+        color:#404040;
+        margin: 0 15px;
+        margin-bottom: 25px;
+        transition:.5s;
+      } 
+.cool-icons {
+  position:relative;
+  margin:0;
+  padding:0;
+
+}
+
+}
+@media screen and (max-width:480px){ul li a {
+        display:block;
+        position:relative;
         width:70px;
         height:70px;
         line-height:70px;
-        font-size:32px;
+        font-size:28px;
         text-align:center;
         text-decoration:none;
         color:#404040;
         margin: 0 10px;
         margin-bottom: 25px;
         transition:.5s;
-      }    
+      } 
+.cool-icons {
+  position:relative;
+  margin:0;
+  padding:0;
+  display:flex;
+    flex-wrap:wrap;
+  
+}}
+@media screen and (max-width:420px){.coming-soon{margin-top:5vh;margin-bottom:30px;}
+  ul li a {
+        display:block;
+        position:relative;
+        width:50px;
+        height:50px;
+        line-height:50px;
+        font-size:28px;
+        text-align:center;
+        text-decoration:none;
+        color:#404040;
+        margin: 0 10px;
+        margin-bottom: 25px;
+        transition:.5s;
+      } 
+.cool-icons {
+  position:relative;
+  margin:0;
+  padding:0;
+  display:flex;
+    flex-wrap:wrap;
+  
+}} 
+@media (forced-colors: active) {
+    .body-cs {
+    overflow: hidden !important;
+    background-color: #000000 !important;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='25' viewBox='0 0 20 20'%3E%3Cg fill-opacity='0.36'%3E%3Cpolygon fill='%230D0D0D' points='20 10 10 0 0 0 20 20'/%3E%3Cpolygon fill='%230D0D0D' points='0 10 0 20 10 20'/%3E%3C/g%3E%3C/svg%3E") !important;
+    text-align: center !important;
+    color:#fff !important;
+    padding-top:50px !important;
+    height: 100vh !important;
+    max-height: 100vh !important;
+  }
+   .nav {
+    display: flex;
+    justify-content: flex-end;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80px;
+   background: rgba(19, 19, 19, 0.3);
+  box-shadow: 0 8px 32px 0 rgba(39, 240, 32, 0.11);
+  backdrop-filter: blur( 8px );
+  -webkit-backdrop-filter: blur( 8px );
+  border-radius:2px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+    z-index: 10;
+  }
+  
+  * { color:#fff; text-decoration: none;}
+     svg path,
+  svg rect{
+    fill: green;
+  }
+    .cursor {
+    position: absolute;
+    height: 18px;
+    width: 18px;
+    background-color: green;
+    border-radius: 50%;
+    z-index: 1000;
+    box-shadow: 0px 0px 5px green;
 }
-@media screen and (max-width:400px){.coming-soon{margin-top:15vh;margin-bottom:30px;}} 
+     ul li a {
+    display:block;
+    position:relative;
+    width:100px;
+    height:100px;
+    line-height:100px;
+    font-size:40px;
+    text-align:center;
+    text-decoration:none;
+    color:#404040;
+    margin: 0 30px;
+    transition:.5s;
+  }
+    .green-icon:hover {
+    color: green;
+    box-shadow: 0px 0px 10px green;
+  }
+  .green-icon:hover span { 
+    background: green;
+  }
+}
